--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -1,12 +1,13 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master
-ADC1.NbrOfConversionFlag=1
-ADC1.Offset-0\#ChannelRegularConversion=0
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,SamplingTimeOPAMP-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.Offset-0\#ChannelRegularConversion=0
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC2.SamplingTimeOPAMP-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC2.SubFamily=STM32F303x8
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -15,13 +16,13 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F303K8T6
 Mcu.Family=STM32F3
-Mcu.IP0=ADC1
+Mcu.IP0=ADC2
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IPNb=3
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PA1
+Mcu.Pin0=PA4
 Mcu.Pin1=PA10
 Mcu.Pin2=PB5
 Mcu.PinsNb=3
@@ -42,13 +43,13 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA1.Locked=true
-PA1.Mode=IN2-Single-Ended
-PA1.Signal=ADC1_IN2
 PA10.GPIOParameters=GPIO_ModeDefaultEXTI
 PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA10.Locked=true
 PA10.Signal=GPXTI10
+PA4.Locked=true
+PA4.Mode=IN1-Single-Ended
+PA4.Signal=ADC2_IN1
 PB5.GPIOParameters=GPIO_Speed
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
