--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -22,10 +22,17 @@ Mcu.IP2=RCC
 Mcu.IPNb=3
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PA4
-Mcu.Pin1=PA10
-Mcu.Pin2=PB5
-Mcu.PinsNb=3
+Mcu.Pin0=PF1 / OSC_OUT
+Mcu.Pin1=PA0
+Mcu.Pin2=PA1
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA8
+Mcu.Pin6=PA10
+Mcu.Pin7=PA11
+Mcu.Pin8=PB4
+Mcu.Pin9=PB5
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -43,17 +50,29 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.Locked=true
+PA0.Signal=GPIO_Output
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA10.GPIOParameters=GPIO_ModeDefaultEXTI
 PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA10.Locked=true
 PA10.Signal=GPXTI10
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Mode=IN1-Single-Ended
 PA4.Signal=ADC2_IN1
-PB5.GPIOParameters=GPIO_Speed
-PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PB4.Locked=true
+PB4.Signal=GPIO_Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PF1\ /\ OSC_OUT.Locked=true
+PF1\ /\ OSC_OUT.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -83,7 +102,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC2_Init-ADC2-false-HAL-true
 RCC.ADC12outputFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
