--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -19,11 +19,14 @@ Mcu.Family=STM32F3
 Mcu.IP0=ADC2
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IPNb=3
+Mcu.IP3=TIM2
+Mcu.IPNb=4
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF1 / OSC_OUT
 Mcu.Pin1=PA0
+Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM2_VS_no_output1
 Mcu.Pin2=PA1
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
@@ -32,7 +35,7 @@ Mcu.Pin6=PA10
 Mcu.Pin7=PA11
 Mcu.Pin8=PB4
 Mcu.Pin9=PB5
-Mcu.PinsNb=10
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -135,5 +138,13 @@ RCC.USART1Freq_Value=32000000
 RCC.VCOOutput2Freq_Value=4000000
 SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler,AutoReloadPreload
+TIM2.Prescaler=64-1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 board=custom
 isbadioc=false
