--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -25,17 +25,18 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF1 / OSC_OUT
 Mcu.Pin1=PA0
-Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin11=VP_TIM2_VS_no_output1
+Mcu.Pin10=PB5
+Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM2_VS_no_output1
 Mcu.Pin2=PA1
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
-Mcu.Pin5=PA8
-Mcu.Pin6=PA10
-Mcu.Pin7=PA11
-Mcu.Pin8=PB4
-Mcu.Pin9=PB5
-Mcu.PinsNb=12
+Mcu.Pin5=PB1
+Mcu.Pin6=PA8
+Mcu.Pin7=PA10
+Mcu.Pin8=PA11
+Mcu.Pin9=PB4
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -70,6 +71,8 @@ PA4.Mode=IN1-Single-Ended
 PA4.Signal=ADC2_IN1
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
@@ -105,7 +108,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC2_Init-ADC2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC2_Init-ADC2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12outputFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
