--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -1,48 +1,88 @@
 #MicroXplorer Configuration settings - do not modify
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC2.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,SamplingTimeOPAMP-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC1.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,SamplingTimeOPAMP-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Offset-0\#ChannelRegularConversion=0
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTimeOPAMP-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC1.SubFamily=STM32F303x8
+ADC1.master=1
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,SamplingTimeOPAMP-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag
 ADC2.NbrOfConversionFlag=1
-ADC2.Offset-0\#ChannelRegularConversion=0
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC2.SamplingTimeOPAMP-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
-ADC2.SubFamily=STM32F303x8
+ADC2.Offset-1\#ChannelRegularConversion=0
+ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-1\#ChannelRegularConversion=1
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC2.SamplingTimeOPAMP-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+DAC1.DAC_Trigger=DAC_TRIGGER_T3_TRGO
+DAC1.IPParameters=DAC_Trigger
+Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.1.Instance=DMA1_Channel1
+Dma.ADC1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.1.Mode=DMA_NORMAL
+Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.DAC1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.DAC1_CH1.0.Instance=DMA1_Channel3
+Dma.DAC1_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DAC1_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.DAC1_CH1.0.Mode=DMA_CIRCULAR
+Dma.DAC1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DAC1_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DAC1_CH1.0.Priority=DMA_PRIORITY_HIGH
+Dma.DAC1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=DAC1_CH1
+Dma.Request1=ADC1
+Dma.RequestsNb=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F303K8T6
 Mcu.Family=STM32F3
-Mcu.IP0=ADC2
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=TIM2
-Mcu.IPNb=4
+Mcu.IP0=ADC1
+Mcu.IP1=ADC2
+Mcu.IP2=DAC1
+Mcu.IP3=DMA
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IPNb=8
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF1 / OSC_OUT
 Mcu.Pin1=PA0
-Mcu.Pin10=PB5
-Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM2_VS_no_output1
+Mcu.Pin10=PB4
+Mcu.Pin11=PB5
+Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM2_VS_no_output1
+Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
-Mcu.Pin5=PB1
-Mcu.Pin6=PA8
-Mcu.Pin7=PA10
-Mcu.Pin8=PA11
-Mcu.Pin9=PB4
-Mcu.PinsNb=13
+Mcu.Pin5=PA7
+Mcu.Pin6=PB1
+Mcu.Pin7=PA8
+Mcu.Pin8=PA10
+Mcu.Pin9=PA11
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
 MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -67,12 +107,15 @@ PA11.Signal=GPIO_Output
 PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.Locked=true
-PA4.Mode=IN1-Single-Ended
-PA4.Signal=ADC2_IN1
+PA4.Signal=SharedAnalog_PA4
+PA7.Locked=true
+PA7.Mode=IN4-Single-Ended
+PA7.Signal=ADC2_IN4
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB1.Mode=IN12-Single-Ended
+PB1.Signal=ADC1_IN12
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
@@ -108,7 +151,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC2_Init-ADC2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_DAC1_Init-DAC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.ADC12outputFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -141,13 +184,22 @@ RCC.USART1Freq_Value=32000000
 RCC.VCOOutput2Freq_Value=4000000
 SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
+SH.SharedAnalog_PA4.0=ADC2_IN1
+SH.SharedAnalog_PA4.1=DAC1_OUT1,DAC_OUT1
+SH.SharedAnalog_PA4.ConfNb=2
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler,AutoReloadPreload
 TIM2.Prescaler=64-1
+TIM3.IPParameters=Period,TIM_MasterOutputTrigger,Prescaler
+TIM3.Period=16-1
+TIM3.Prescaler=64-1
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
