--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -1,13 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC1.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,SamplingTimeOPAMP-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 ADC1.NbrOfConversionFlag=1
 ADC1.Offset-0\#ChannelRegularConversion=0
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTimeOPAMP-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
-ADC1.SubFamily=STM32F303x8
 ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,SamplingTimeOPAMP-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,SubFamily
@@ -49,21 +47,22 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF1 / OSC_OUT
 Mcu.Pin1=PA0
-Mcu.Pin10=PA12
-Mcu.Pin11=PB4
-Mcu.Pin12=PB5
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM2_VS_no_output1
-Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM2_VS_no_output1
+Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA7
-Mcu.Pin6=PB1
-Mcu.Pin7=PA8
-Mcu.Pin8=PA10
-Mcu.Pin9=PA11
-Mcu.PinsNb=16
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PA8
+Mcu.Pin9=PA10
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -108,6 +107,9 @@ PA7.Mode=IN4-Single-Ended
 PA7.Signal=ADC2_IN4
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PB0.Locked=true
+PB0.Mode=IN11-Single-Ended
+PB0.Signal=ADC1_IN11
 PB1.Locked=true
 PB1.Mode=IN12-Single-Ended
 PB1.Signal=ADC1_IN12
