--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -8,23 +8,22 @@ ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,SamplingTimeOPAMP-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,SubFamily
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion
+ADC2.NbrOfConversion=1
 ADC2.NbrOfConversionFlag=1
 ADC2.Offset-1\#ChannelRegularConversion=0
 ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-1\#ChannelRegularConversion=1
-ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC2.SamplingTimeOPAMP-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
-ADC2.SubFamily=STM32F303x8
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.0.Mode=DMA_NORMAL
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
@@ -51,9 +50,10 @@ Mcu.Pin10=PA11
 Mcu.Pin11=PA12
 Mcu.Pin12=PB4
 Mcu.Pin13=PB5
-Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM2_VS_no_output1
-Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM2_VS_no_output1
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -62,7 +62,7 @@ Mcu.Pin6=PB0
 Mcu.Pin7=PB1
 Mcu.Pin8=PA8
 Mcu.Pin9=PA10
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -117,6 +117,8 @@ PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB7.Locked=true
+PB7.Signal=S_TIM3_CH4
 PF1\ /\ OSC_OUT.Locked=true
 PF1\ /\ OSC_OUT.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -185,13 +187,18 @@ SH.GPXTI12.0=GPIO_EXTI12
 SH.GPXTI12.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler,AutoReloadPreload
 TIM2.Prescaler=64-1
-TIM3.IPParameters=Period,TIM_MasterOutputTrigger,Prescaler
-TIM3.Period=16-1
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Period,TIM_MasterOutputTrigger,Prescaler,Channel-PWM Generation4 CH4,AutoReloadPreload,Pulse-PWM Generation4 CH4
+TIM3.Period=65534-1
 TIM3.Prescaler=64-1
+TIM3.Pulse-PWM\ Generation4\ CH4=0
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
