--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -5,16 +5,17 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Offset-0\#ChannelRegularConversion=0
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,SubFamily
 ADC2.NbrOfConversion=1
 ADC2.NbrOfConversionFlag=1
 ADC2.Offset-1\#ChannelRegularConversion=0
 ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-1\#ChannelRegularConversion=1
 ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC2.SubFamily=STM32F303x8
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -44,25 +45,26 @@ Mcu.IP6=TIM3
 Mcu.IPNb=7
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PF1 / OSC_OUT
-Mcu.Pin1=PA0
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PB4
-Mcu.Pin13=PB5
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM2_VS_no_output1
-Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PA1
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA7
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PA8
-Mcu.Pin9=PA10
-Mcu.PinsNb=18
+Mcu.Pin0=PF0 / OSC_IN
+Mcu.Pin1=PF1 / OSC_OUT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PB4
+Mcu.Pin14=PB5
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM2_VS_no_output1
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PA0
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PA8
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -101,7 +103,8 @@ PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.Locked=true
 PA2.Signal=GPXTI2
 PA3.Locked=true
-PA3.Signal=GPIO_Output
+PA3.Mode=IN4-Single-Ended
+PA3.Signal=ADC1_IN4
 PA7.Locked=true
 PA7.Mode=IN4-Single-Ended
 PA7.Signal=ADC2_IN4
@@ -119,6 +122,8 @@ PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB7.Locked=true
 PB7.Signal=S_TIM3_CH4
+PF0\ /\ OSC_IN.Locked=true
+PF0\ /\ OSC_IN.Signal=GPIO_Output
 PF1\ /\ OSC_OUT.Locked=true
 PF1\ /\ OSC_OUT.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
