--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -1,11 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master,SubFamily
 ADC1.NbrOfConversionFlag=1
 ADC1.Offset-0\#ChannelRegularConversion=0
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC1.SubFamily=STM32F303x8
 ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,SubFamily
@@ -52,10 +53,11 @@ Mcu.Pin11=PA11
 Mcu.Pin12=PA12
 Mcu.Pin13=PB4
 Mcu.Pin14=PB5
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM2_VS_no_output1
-Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM2_VS_no_output1
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA0
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -64,7 +66,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PA8
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -120,6 +122,10 @@ PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_ModeDefaultEXTI
+PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB6.Locked=true
+PB6.Signal=GPXTI6
 PB7.Locked=true
 PB7.Signal=S_TIM3_CH4
 PF0\ /\ OSC_IN.Locked=true
@@ -192,6 +198,8 @@ SH.GPXTI12.0=GPIO_EXTI12
 SH.GPXTI12.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
