--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -127,7 +127,7 @@ PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB6.Locked=true
 PB6.Signal=GPXTI6
 PB7.Locked=true
-PB7.Signal=S_TIM3_CH4
+PB7.Signal=GPIO_Output
 PF0\ /\ OSC_IN.Locked=true
 PF0\ /\ OSC_IN.Signal=GPIO_Output
 PF1\ /\ OSC_OUT.Locked=true
@@ -200,18 +200,14 @@ SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
-SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
-SH.S_TIM3_CH4.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler,AutoReloadPreload
 TIM2.Prescaler=64-1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Period,TIM_MasterOutputTrigger,Prescaler,Channel-PWM Generation4 CH4,AutoReloadPreload,Pulse-PWM Generation4 CH4
+TIM3.IPParameters=Period,TIM_MasterOutputTrigger,Prescaler,AutoReloadPreload
 TIM3.Period=65534-1
 TIM3.Prescaler=64-1
-TIM3.Pulse-PWM\ Generation4\ CH4=0
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
