--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -48,25 +48,28 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
 Mcu.Pin1=PF1 / OSC_OUT
-Mcu.Pin10=PA10
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PB4
-Mcu.Pin14=PB5
-Mcu.Pin15=PB6
-Mcu.Pin16=PB7
-Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM2_VS_no_output1
-Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PA0
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM2_VS_no_output1
+Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PA8
-Mcu.PinsNb=20
+Mcu.Pin6=PA4
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -107,17 +110,24 @@ PA2.Signal=GPXTI2
 PA3.Locked=true
 PA3.Mode=IN4-Single-Ended
 PA3.Signal=ADC1_IN4
+PA4.Locked=true
+PA4.Mode=IN1-Single-Ended
+PA4.Signal=ADC2_IN1
 PA7.Locked=true
 PA7.Mode=IN4-Single-Ended
 PA7.Signal=ADC2_IN4
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Signal=GPXTI9
 PB0.Locked=true
 PB0.Mode=IN11-Single-Ended
 PB0.Signal=ADC1_IN11
 PB1.Locked=true
 PB1.Mode=IN12-Single-Ended
 PB1.Signal=ADC1_IN12
+PB3.Locked=true
+PB3.Signal=GPIO_Input
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
@@ -200,6 +210,8 @@ SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler,AutoReloadPreload
