--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -9,14 +9,13 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 ADC1.SubFamily=STM32F303x8
 ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,SubFamily
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion
 ADC2.NbrOfConversion=1
 ADC2.NbrOfConversionFlag=1
 ADC2.Offset-1\#ChannelRegularConversion=0
 ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-1\#ChannelRegularConversion=1
 ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
-ADC2.SubFamily=STM32F303x8
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -48,26 +47,27 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
 Mcu.Pin1=PF1 / OSC_OUT
-Mcu.Pin10=PA8
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM2_VS_no_output1
+Mcu.Pin10=PB1
+Mcu.Pin11=PA8
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PB4
+Mcu.Pin16=PB5
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA0
-Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM2_VS_no_output1
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
-Mcu.Pin7=PA7
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
-Mcu.PinsNb=21
+Mcu.Pin7=PA5
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -111,6 +111,8 @@ PA3.Signal=ADC1_IN4
 PA4.Locked=true
 PA4.Mode=IN1-Single-Ended
 PA4.Signal=ADC2_IN1
+PA5.Mode=IN2-Single-Ended
+PA5.Signal=ADC2_IN2
 PA7.Locked=true
 PA7.Mode=IN4-Single-Ended
 PA7.Signal=ADC2_IN4
