--- a/tlc_meter.ioc
+++ b/tlc_meter.ioc
@@ -1,12 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master,SubFamily
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 ADC1.NbrOfConversionFlag=1
 ADC1.Offset-0\#ChannelRegularConversion=0
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
-ADC1.SubFamily=STM32F303x8
 ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion
@@ -47,8 +46,8 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
 Mcu.Pin1=PF1 / OSC_OUT
-Mcu.Pin10=PB1
-Mcu.Pin11=PA8
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
 Mcu.Pin12=PA10
 Mcu.Pin13=PA11
 Mcu.Pin14=PA12
@@ -64,9 +63,9 @@ Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
 Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -87,7 +86,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Locked=true
-PA0.Signal=GPIO_Output
+PA0.Mode=IN1-Single-Ended
+PA0.Signal=ADC1_IN1
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.GPIOParameters=GPIO_ModeDefaultEXTI
@@ -111,13 +111,13 @@ PA3.Signal=ADC1_IN4
 PA4.Locked=true
 PA4.Mode=IN1-Single-Ended
 PA4.Signal=ADC2_IN1
-PA5.Mode=IN2-Single-Ended
-PA5.Signal=ADC2_IN2
 PA7.Locked=true
 PA7.Mode=IN4-Single-Ended
 PA7.Signal=ADC2_IN4
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB0.Locked=true
 PB0.Mode=IN11-Single-Ended
 PB0.Signal=ADC1_IN11
